--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^12.4.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
